--- a/src/component/Nav.css
+++ b/src/component/Nav.css
@@ -54,3 +54,16 @@
     width: 30px;
     object-fit: contain;
   }
+
+  @media screen and (max-width: 475px) {
+    .nav_avatar {
+      display: none;
+    }
+    ul {
+      right: 10px;
+    }
+    li {
+      margin-left: 10px;
+      margin-right: 0px;
+    }
+  }
